<resources>
    <string name="hello">Hello World, XListViewActivity!</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">上拉查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="app_name">WeMate</string>
    <string name="share">分享</string>
    <string name="collect">收藏</string>
    <string name="more">加载更多</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="atMe">\&#064;我的</string>
    <string name="personalMessage">私信</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消登录</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="weibosdk_demo_toast_auth_success">登录成功</string>
    <string name="weibosdk_demo_toast_auth_failed">登录失败</string>
    <string name="regist_address">https://passport.sina.cn/signup/signup</string>
    <string name="logout">退出当前帐号</string>
    <string name="retweet_title">转发微博</string>
    <string name="retweet">转发</string>
    <string name="retweet_cout">转发数</string>
    <string name="cancle">取消</string>
    <string name="input_hint">说说分享心得</string>
    <string name="com_hint">说点什么好呢</string>
    <string name="com_title">评论给Ta</string>
    <string name="comment">评论</string>
    <string name="comment_cout">评论数</string>
    <string name="exit">退出</string>
    <string name="loading">加载中</string>
    <string name="total">140/140</string>
    <string name="alert">微博内容为空或字数超过限制！</string>
    <string name="success_new">发布成功</string>
    <string name="retweed_error">抱歉，该微博已被作者删除。</string>
    <string name="input_prefill"/>
    <string name="title_activity_user_main_page">用户主页</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="done">加载完毕</string>
    <string name="title_activity_web_view">WebView</string>
</resources>
