<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_retweet"
        android:title="@string/retweet"
        android:icon="@drawable/toolbar_icon_retweet"
        app:showAsAction="ifRoom"
        android:orderInCategory="80"/>
    <item
            android:id="@+id/item_comment"
            android:title="@string/comment"
            android:icon="@drawable/toolbar_icon_comment"
            app:showAsAction="ifRoom"
            android:orderInCategory="80"/>
    <item
        android:id="@+id/item_collect"
        android:title="@string/collect"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
            android:id="@+id/item_share"
            android:title="@string/share"
            android:orderInCategory="100"
            app:showAsAction="never"/>
</menu>