<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.CardView
            android:id="@+id/de_card"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            app:cardCornerRadius="5dp"
            app:elevation="16dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="16dp">

                <!--用户信息-->
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                        <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/de_profile"
                                android:layout_width="45dp"
                                android:layout_height="45dp"/>

                        <ImageView
                                android:id="@+id/de_verified"
                                android:visibility="gone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@mipmap/avatar_vip"
                                android:layout_gravity="right|bottom"/>
                    </FrameLayout>

                    <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/de_name"
                                android:textSize="16sp"
                                android:textColor="#000000"
                                android:layout_marginLeft="8dp"/>
                        <TextView
                                android:layout_alignParentEnd="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/de_createdAt"
                                android:layout_below="@id/de_name"
                                android:layout_alignStart="@id/de_name"
                                android:textSize="14sp"/>
                    </RelativeLayout>
                </LinearLayout>

                <!--微博正文-->
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/de_content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:layout_marginTop="16dp"
                            android:textColor="#000000"/>
                    <RelativeLayout
                            android:id="@+id/de_rl4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingRight="25dp"
                            android:layout_marginTop="8dp"
                            android:visibility="gone" >
                        <com.zkx.weipo.app.view.MyGridView
                                android:id="@+id/de_images1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:horizontalSpacing="4dp"
                                android:numColumns="3"
                                android:stretchMode="columnWidth"
                                android:verticalSpacing="4dp"
                                />
                    </RelativeLayout>
                </LinearLayout>

                <!--转发信息-->
                <LinearLayout
                        android:orientation="vertical"
                        android:id="@+id/de_retweet_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:visibility="gone"
                        android:showDividers="beginning"
                        android:divider="@drawable/divider"
                        >
                    <TextView
                            android:layout_marginTop="8dp"
                            android:id="@+id/de_retweet_detail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"/>
                    <RelativeLayout
                            android:id="@+id/de_rl5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingRight="25dp"
                            android:layout_marginTop="8dp"
                            android:visibility="gone" >
                        <com.zkx.weipo.app.view.MyGridView
                                android:id="@+id/de_images2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:horizontalSpacing="4dp"
                                android:numColumns="3"
                                android:stretchMode="columnWidth"
                                android:verticalSpacing="4dp"
                                />
                    </RelativeLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <!--来源信息-->
                <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/de_source"
                            android:textSize="14sp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            android:layout_alignParentLeft="true"/>
                </RelativeLayout>
                <!--功能按钮-->
                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/de_repeat"
                            android:background="@android:color/transparent"
                            android:text="@string/retweet"
                            android:textColor="@color/main_light"
                            android:layout_alignParentTop="true"
                            android:layout_toStartOf="@+id/de_comment"/>
                    <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/de_comment"
                            android:background="@android:color/transparent"
                            android:text="@string/comment"
                            android:textColor="@color/main_light"
                            android:layout_alignParentEnd="true"/>
                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:id="@+id/ly_tab_bar"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:orientation="horizontal">
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/txt_retweet"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/retweet_cout"
                        android:textColor="@color/text_grey"
                        android:textSize="16sp"
                        android:layout_marginLeft="24dp"
                        />

                <TextView
                        android:id="@+id/retweet_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textColor="@color/text_grey"
                        android:textSize="16sp"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/txt_comment"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/comment_cout"
                        android:textColor="@color/text_grey"
                        android:textSize="16sp"
                        android:layout_marginLeft="16dp"
                        />

                <TextView
                        android:id="@+id/comment_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textColor="@color/text_grey"
                        android:textSize="16sp"/>
            </LinearLayout>
        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:id="@+id/div_tab_bar"
                android:background="@color/text_grey"
                android:layout_below="@id/ly_tab_bar"/>

    </RelativeLayout>

</LinearLayout>